[gd_scene load_steps=5 format=3 uid="uid://3ywtc3khahph"]

[ext_resource type="PackedScene" uid="uid://c3q3cv3jeiqm2" path="res://component/controllers/Controller.tscn" id="1_gqqxm"]
[ext_resource type="Script" path="res://component/controllers/ai/StationAIController.gd" id="2_nujxn"]
[ext_resource type="Texture2D" uid="uid://dhd6dnh6yer3g" path="res://icon.png" id="3_sa132"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_s1ejk"]
radius = 9.0

[node name="Controller" instance=ExtResource("1_gqqxm")]
script = ExtResource("2_nujxn")

[node name="Label" type="Label3D" parent="." index="0"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 1.38364, 0)
visible = false
billboard = 1

[node name="Rethink" type="Timer" parent="." index="1"]
autostart = true

[node name="EngagementRange" type="Area3D" parent="." index="2"]
collision_layer = 0
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="EngagementRange" index="0"]
shape = SubResource("CylinderShape3D_s1ejk")

[node name="LeadIndicator" type="Sprite3D" parent="." index="3"]
visible = false
pixel_size = 0.005
billboard = 1
fixed_size = true
texture = ExtResource("3_sa132")

[connection signal="timeout" from="Rethink" to="." method="_on_Rethink_timeout"]
[connection signal="body_entered" from="EngagementRange" to="." method="_on_EngagementRange_body_entered"]
[connection signal="body_exited" from="EngagementRange" to="." method="_on_EngagementRange_body_exited"]
